--- a/extract-macm-studies.ipynb
+++ b/extract-macm-studies.ipynb
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "94c08141",
    "metadata": {},
    "outputs": [],
@@ -643,6 +643,7 @@
     "    Given a list of ROI names (matching subfolder names in derivatives/macm),\n",
     "    find the intersection of their study IDs and save as a new CSV.\n",
     "    If output_csv_path is not provided, it will be named automatically as 'roi1-roi2-...-studies.csv'.\n",
+    "    Prints any duplicated IDs in the output.\n",
     "    \"\"\"\n",
     "    # Load DataFrames for the specified ROIs\n",
     "    dfs = []\n",
@@ -661,23 +662,20 @@
     "    # Optionally, merge metadata from the first ROI\n",
     "    if common_ids:\n",
     "        merged = dfs[0][dfs[0]['id'].isin(common_ids)].copy()\n",
+    "        # Check for duplicated IDs\n",
+    "        duplicated = merged['id'][merged['id'].duplicated(keep=False)]\n",
+    "        if not duplicated.empty:\n",
+    "            print(\"Duplicated IDs in output:\")\n",
+    "            print(duplicated.values)\n",
+    "        else:\n",
+    "            print(\"No duplicated IDs in output.\")\n",
     "        if output_csv_path is None:\n",
     "            roi_part = '-'.join(roi_names)\n",
     "            output_csv_path = f\"derivatives/macm/{roi_part}-studies.csv\"\n",
     "        merged.to_csv(output_csv_path, index=False)\n",
     "        print(f\"Saved intersection CSV to {output_csv_path}\")\n",
     "    else:\n",
-    "        print(\"No common study IDs found.\")\n",
-    "\n",
-    "def compare_all_rois_and_save_csv():\n",
-    "    \"\"\"\n",
-    "    Find the intersection of study IDs across all ROI CSVs and save as 9ROIs-studies.csv.\n",
-    "    \"\"\"\n",
-    "    roi_names = [f for f in os.listdir(macm_dir) if op.isdir(op.join(macm_dir, f))]\n",
-    "    if not roi_names:\n",
-    "        print(\"No ROI folders found in macm_dir.\")\n",
-    "        return\n",
-    "    compare_rois_and_save_csv(roi_names, output_csv_path=\"derivatives/macm/9ROIs-studies.csv\")\n"
+    "        print(\"No common study IDs found.\")\n"
    ]
   },
   {
